parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ANY
    AS
    BY
    CHECK
    DEC
    DEFAULT
    DESCRIBE
    DISTINCT
    DOUBLE
    ESCAPE
    ESCAPED
    EXISTS
    EXIT
    FALSE
    FOREIGN
    GRANT
    GROUP
    HAVING
    IN
    IS
    JOIN
    KEY
    LONG
    MOD
    ON
    ORDER
    STRING
    TO
    TRUE
    UNION
    UNIQUE
    VARCHAR

Grammar

Rule 0     S' -> statement
Rule 1     statement -> database_statement SEMICOLON
Rule 2     statement -> table_statement SEMICOLON
Rule 3     database_statement -> CREATE DATABASE ID
Rule 4     database_statement -> SHOW DATABASES
Rule 5     database_statement -> USE ID
Rule 6     database_statement -> DROP DATABASE ID
Rule 7     table_statement -> CREATE TABLE ID LPAREN base_elements_list RPAREN
Rule 8     base_elements_list -> base_element
Rule 9     base_elements_list -> base_elements_list COMMA base_element
Rule 10    base_element -> ID data_type
Rule 11    data_type -> CHAR LPAREN NUM RPAREN
Rule 12    data_type -> INT
Rule 13    data_type -> FLOAT
Rule 14    table_statement -> INSERT INTO ID LPAREN opt_column_list RPAREN VALUES insert_values_list
Rule 15    table_statement -> INSERT INTO ID VALUES insert_values_list
Rule 16    opt_column_list -> ID
Rule 17    opt_column_list -> opt_column_list COMMA ID
Rule 18    insert_values_list -> LPAREN insert_value RPAREN
Rule 19    insert_values_list -> insert_values_list COMMA LPAREN insert_value RPAREN
Rule 20    insert_value -> base_value
Rule 21    insert_value -> insert_value COMMA base_value
Rule 22    base_value -> NUM
Rule 23    base_value -> QUOTE ID QUOTE
Rule 24    base_value -> DQUOTE ID DQUOTE
Rule 25    base_value -> ID_NUM
Rule 26    table_statement -> SELECT sel_col_list FROM ID
Rule 27    table_statement -> SELECT sel_col_list FROM ID WHERE condition
Rule 28    sel_col_list -> sel_col_list COMMA ID
Rule 29    sel_col_list -> ID
Rule 30    sel_col_list -> *
Rule 31    condition -> condition OR and_condition
Rule 32    condition -> and_condition
Rule 33    and_condition -> and_condition AND factor
Rule 34    and_condition -> factor
Rule 35    factor -> ID_factor
Rule 36    factor -> NUM_factor
Rule 37    factor -> LPAREN condition RPAREN
Rule 38    factor -> NOT factor
Rule 39    ID_factor -> ID = QUOTE ID QUOTE
Rule 40    ID_factor -> ID = DQUOTE ID DQUOTE
Rule 41    ID_factor -> ID = ID_NUM
Rule 42    ID_factor -> ID LIKE QUOTE ID QUOTE
Rule 43    ID_factor -> ID LIKE DQUOTE ID DQUOTE
Rule 44    ID_factor -> ID LIKE ID_NUM
Rule 45    NUM_factor -> ID = NUM
Rule 46    NUM_factor -> ID DE NUM
Rule 47    NUM_factor -> ID > NUM
Rule 48    NUM_factor -> ID GE NUM
Rule 49    NUM_factor -> ID < NUM
Rule 50    NUM_factor -> ID LE NUM
Rule 51    table_statement -> UPDATE ID SET set_list WHERE condition
Rule 52    set_list -> set_list COMMA set_atom
Rule 53    set_list -> set_atom
Rule 54    set_atom -> ID = QUOTE ID QUOTE
Rule 55    set_atom -> ID = DQUOTE ID DQUOTE
Rule 56    set_atom -> ID = ID_NUM
Rule 57    set_atom -> ID = NUM
Rule 58    table_statement -> DELETE FROM ID WHERE condition
Rule 59    table_statement -> DELETE FROM ID
Rule 60    table_statement -> DROP TABLE ID

Terminals, with rules where they appear

*                    : 30
<                    : 49
=                    : 39 40 41 45 54 55 56 57
>                    : 47
AND                  : 33
ANY                  : 
AS                   : 
BY                   : 
CHAR                 : 11
CHECK                : 
COMMA                : 9 17 19 21 28 52
CREATE               : 3 7
DATABASE             : 3 6
DATABASES            : 4
DE                   : 46
DEC                  : 
DEFAULT              : 
DELETE               : 58 59
DESCRIBE             : 
DISTINCT             : 
DOUBLE               : 
DQUOTE               : 24 24 40 40 43 43 55 55
DROP                 : 6 60
ESCAPE               : 
ESCAPED              : 
EXISTS               : 
EXIT                 : 
FALSE                : 
FLOAT                : 13
FOREIGN              : 
FROM                 : 26 27 58 59
GE                   : 48
GRANT                : 
GROUP                : 
HAVING               : 
ID                   : 3 5 6 7 10 14 15 16 17 23 24 26 27 28 29 39 39 40 40 41 42 42 43 43 44 45 46 47 48 49 50 51 54 54 55 55 56 57 58 59 60
ID_NUM               : 25 41 44 56
IN                   : 
INSERT               : 14 15
INT                  : 12
INTO                 : 14 15
IS                   : 
JOIN                 : 
KEY                  : 
LE                   : 50
LIKE                 : 42 43 44
LONG                 : 
LPAREN               : 7 11 14 18 19 37
MOD                  : 
NOT                  : 38
NUM                  : 11 22 45 46 47 48 49 50 57
ON                   : 
OR                   : 31
ORDER                : 
QUOTE                : 23 23 39 39 42 42 54 54
RPAREN               : 7 11 14 18 19 37
SELECT               : 26 27
SEMICOLON            : 1 2
SET                  : 51
SHOW                 : 4
STRING               : 
TABLE                : 7 60
TO                   : 
TRUE                 : 
UNION                : 
UNIQUE               : 
UPDATE               : 51
USE                  : 5
VALUES               : 14 15
VARCHAR              : 
WHERE                : 27 51 58
error                : 

Nonterminals, with rules where they appear

ID_factor            : 35
NUM_factor           : 36
and_condition        : 31 32 33
base_element         : 8 9
base_elements_list   : 7 9
base_value           : 20 21
condition            : 27 31 37 51 58
data_type            : 10
database_statement   : 1
factor               : 33 34 38
insert_value         : 18 19 21
insert_values_list   : 14 15 19
opt_column_list      : 14 17
sel_col_list         : 26 27 28
set_atom             : 52 53
set_list             : 51 52
statement            : 0
table_statement      : 2

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . database_statement SEMICOLON
    (2) statement -> . table_statement SEMICOLON
    (3) database_statement -> . CREATE DATABASE ID
    (4) database_statement -> . SHOW DATABASES
    (5) database_statement -> . USE ID
    (6) database_statement -> . DROP DATABASE ID
    (7) table_statement -> . CREATE TABLE ID LPAREN base_elements_list RPAREN
    (14) table_statement -> . INSERT INTO ID LPAREN opt_column_list RPAREN VALUES insert_values_list
    (15) table_statement -> . INSERT INTO ID VALUES insert_values_list
    (26) table_statement -> . SELECT sel_col_list FROM ID
    (27) table_statement -> . SELECT sel_col_list FROM ID WHERE condition
    (51) table_statement -> . UPDATE ID SET set_list WHERE condition
    (58) table_statement -> . DELETE FROM ID WHERE condition
    (59) table_statement -> . DELETE FROM ID
    (60) table_statement -> . DROP TABLE ID

    CREATE          shift and go to state 4
    SHOW            shift and go to state 5
    USE             shift and go to state 6
    DROP            shift and go to state 7
    INSERT          shift and go to state 8
    SELECT          shift and go to state 9
    UPDATE          shift and go to state 10
    DELETE          shift and go to state 11

    statement                      shift and go to state 1
    database_statement             shift and go to state 2
    table_statement                shift and go to state 3

state 1

    (0) S' -> statement .



state 2

    (1) statement -> database_statement . SEMICOLON

    SEMICOLON       shift and go to state 12


state 3

    (2) statement -> table_statement . SEMICOLON

    SEMICOLON       shift and go to state 13


state 4

    (3) database_statement -> CREATE . DATABASE ID
    (7) table_statement -> CREATE . TABLE ID LPAREN base_elements_list RPAREN

    DATABASE        shift and go to state 14
    TABLE           shift and go to state 15


state 5

    (4) database_statement -> SHOW . DATABASES

    DATABASES       shift and go to state 16


state 6

    (5) database_statement -> USE . ID

    ID              shift and go to state 17


state 7

    (6) database_statement -> DROP . DATABASE ID
    (60) table_statement -> DROP . TABLE ID

    DATABASE        shift and go to state 18
    TABLE           shift and go to state 19


state 8

    (14) table_statement -> INSERT . INTO ID LPAREN opt_column_list RPAREN VALUES insert_values_list
    (15) table_statement -> INSERT . INTO ID VALUES insert_values_list

    INTO            shift and go to state 20


state 9

    (26) table_statement -> SELECT . sel_col_list FROM ID
    (27) table_statement -> SELECT . sel_col_list FROM ID WHERE condition
    (28) sel_col_list -> . sel_col_list COMMA ID
    (29) sel_col_list -> . ID
    (30) sel_col_list -> . *

    ID              shift and go to state 22
    *               shift and go to state 23

    sel_col_list                   shift and go to state 21

state 10

    (51) table_statement -> UPDATE . ID SET set_list WHERE condition

    ID              shift and go to state 24


state 11

    (58) table_statement -> DELETE . FROM ID WHERE condition
    (59) table_statement -> DELETE . FROM ID

    FROM            shift and go to state 25


state 12

    (1) statement -> database_statement SEMICOLON .

    $end            reduce using rule 1 (statement -> database_statement SEMICOLON .)


state 13

    (2) statement -> table_statement SEMICOLON .

    $end            reduce using rule 2 (statement -> table_statement SEMICOLON .)


state 14

    (3) database_statement -> CREATE DATABASE . ID

    ID              shift and go to state 26


state 15

    (7) table_statement -> CREATE TABLE . ID LPAREN base_elements_list RPAREN

    ID              shift and go to state 27


state 16

    (4) database_statement -> SHOW DATABASES .

    SEMICOLON       reduce using rule 4 (database_statement -> SHOW DATABASES .)


state 17

    (5) database_statement -> USE ID .

    SEMICOLON       reduce using rule 5 (database_statement -> USE ID .)


state 18

    (6) database_statement -> DROP DATABASE . ID

    ID              shift and go to state 28


state 19

    (60) table_statement -> DROP TABLE . ID

    ID              shift and go to state 29


state 20

    (14) table_statement -> INSERT INTO . ID LPAREN opt_column_list RPAREN VALUES insert_values_list
    (15) table_statement -> INSERT INTO . ID VALUES insert_values_list

    ID              shift and go to state 30


state 21

    (26) table_statement -> SELECT sel_col_list . FROM ID
    (27) table_statement -> SELECT sel_col_list . FROM ID WHERE condition
    (28) sel_col_list -> sel_col_list . COMMA ID

    FROM            shift and go to state 31
    COMMA           shift and go to state 32


state 22

    (29) sel_col_list -> ID .

    FROM            reduce using rule 29 (sel_col_list -> ID .)
    COMMA           reduce using rule 29 (sel_col_list -> ID .)


state 23

    (30) sel_col_list -> * .

    FROM            reduce using rule 30 (sel_col_list -> * .)
    COMMA           reduce using rule 30 (sel_col_list -> * .)


state 24

    (51) table_statement -> UPDATE ID . SET set_list WHERE condition

    SET             shift and go to state 33


state 25

    (58) table_statement -> DELETE FROM . ID WHERE condition
    (59) table_statement -> DELETE FROM . ID

    ID              shift and go to state 34


state 26

    (3) database_statement -> CREATE DATABASE ID .

    SEMICOLON       reduce using rule 3 (database_statement -> CREATE DATABASE ID .)


state 27

    (7) table_statement -> CREATE TABLE ID . LPAREN base_elements_list RPAREN

    LPAREN          shift and go to state 35


state 28

    (6) database_statement -> DROP DATABASE ID .

    SEMICOLON       reduce using rule 6 (database_statement -> DROP DATABASE ID .)


state 29

    (60) table_statement -> DROP TABLE ID .

    SEMICOLON       reduce using rule 60 (table_statement -> DROP TABLE ID .)


state 30

    (14) table_statement -> INSERT INTO ID . LPAREN opt_column_list RPAREN VALUES insert_values_list
    (15) table_statement -> INSERT INTO ID . VALUES insert_values_list

    LPAREN          shift and go to state 36
    VALUES          shift and go to state 37


state 31

    (26) table_statement -> SELECT sel_col_list FROM . ID
    (27) table_statement -> SELECT sel_col_list FROM . ID WHERE condition

    ID              shift and go to state 38


state 32

    (28) sel_col_list -> sel_col_list COMMA . ID

    ID              shift and go to state 39


state 33

    (51) table_statement -> UPDATE ID SET . set_list WHERE condition
    (52) set_list -> . set_list COMMA set_atom
    (53) set_list -> . set_atom
    (54) set_atom -> . ID = QUOTE ID QUOTE
    (55) set_atom -> . ID = DQUOTE ID DQUOTE
    (56) set_atom -> . ID = ID_NUM
    (57) set_atom -> . ID = NUM

    ID              shift and go to state 40

    set_list                       shift and go to state 41
    set_atom                       shift and go to state 42

state 34

    (58) table_statement -> DELETE FROM ID . WHERE condition
    (59) table_statement -> DELETE FROM ID .

    WHERE           shift and go to state 43
    SEMICOLON       reduce using rule 59 (table_statement -> DELETE FROM ID .)


state 35

    (7) table_statement -> CREATE TABLE ID LPAREN . base_elements_list RPAREN
    (8) base_elements_list -> . base_element
    (9) base_elements_list -> . base_elements_list COMMA base_element
    (10) base_element -> . ID data_type

    ID              shift and go to state 44

    base_elements_list             shift and go to state 45
    base_element                   shift and go to state 46

state 36

    (14) table_statement -> INSERT INTO ID LPAREN . opt_column_list RPAREN VALUES insert_values_list
    (16) opt_column_list -> . ID
    (17) opt_column_list -> . opt_column_list COMMA ID

    ID              shift and go to state 47

    opt_column_list                shift and go to state 48

state 37

    (15) table_statement -> INSERT INTO ID VALUES . insert_values_list
    (18) insert_values_list -> . LPAREN insert_value RPAREN
    (19) insert_values_list -> . insert_values_list COMMA LPAREN insert_value RPAREN

    LPAREN          shift and go to state 50

    insert_values_list             shift and go to state 49

state 38

    (26) table_statement -> SELECT sel_col_list FROM ID .
    (27) table_statement -> SELECT sel_col_list FROM ID . WHERE condition

    SEMICOLON       reduce using rule 26 (table_statement -> SELECT sel_col_list FROM ID .)
    WHERE           shift and go to state 51


state 39

    (28) sel_col_list -> sel_col_list COMMA ID .

    FROM            reduce using rule 28 (sel_col_list -> sel_col_list COMMA ID .)
    COMMA           reduce using rule 28 (sel_col_list -> sel_col_list COMMA ID .)


state 40

    (54) set_atom -> ID . = QUOTE ID QUOTE
    (55) set_atom -> ID . = DQUOTE ID DQUOTE
    (56) set_atom -> ID . = ID_NUM
    (57) set_atom -> ID . = NUM

    =               shift and go to state 52


state 41

    (51) table_statement -> UPDATE ID SET set_list . WHERE condition
    (52) set_list -> set_list . COMMA set_atom

    WHERE           shift and go to state 53
    COMMA           shift and go to state 54


state 42

    (53) set_list -> set_atom .

    WHERE           reduce using rule 53 (set_list -> set_atom .)
    COMMA           reduce using rule 53 (set_list -> set_atom .)


state 43

    (58) table_statement -> DELETE FROM ID WHERE . condition
    (31) condition -> . condition OR and_condition
    (32) condition -> . and_condition
    (33) and_condition -> . and_condition AND factor
    (34) and_condition -> . factor
    (35) factor -> . ID_factor
    (36) factor -> . NUM_factor
    (37) factor -> . LPAREN condition RPAREN
    (38) factor -> . NOT factor
    (39) ID_factor -> . ID = QUOTE ID QUOTE
    (40) ID_factor -> . ID = DQUOTE ID DQUOTE
    (41) ID_factor -> . ID = ID_NUM
    (42) ID_factor -> . ID LIKE QUOTE ID QUOTE
    (43) ID_factor -> . ID LIKE DQUOTE ID DQUOTE
    (44) ID_factor -> . ID LIKE ID_NUM
    (45) NUM_factor -> . ID = NUM
    (46) NUM_factor -> . ID DE NUM
    (47) NUM_factor -> . ID > NUM
    (48) NUM_factor -> . ID GE NUM
    (49) NUM_factor -> . ID < NUM
    (50) NUM_factor -> . ID LE NUM

    LPAREN          shift and go to state 61
    NOT             shift and go to state 62
    ID              shift and go to state 55

    condition                      shift and go to state 56
    and_condition                  shift and go to state 57
    factor                         shift and go to state 58
    ID_factor                      shift and go to state 59
    NUM_factor                     shift and go to state 60

state 44

    (10) base_element -> ID . data_type
    (11) data_type -> . CHAR LPAREN NUM RPAREN
    (12) data_type -> . INT
    (13) data_type -> . FLOAT

    CHAR            shift and go to state 64
    INT             shift and go to state 65
    FLOAT           shift and go to state 66

    data_type                      shift and go to state 63

state 45

    (7) table_statement -> CREATE TABLE ID LPAREN base_elements_list . RPAREN
    (9) base_elements_list -> base_elements_list . COMMA base_element

    RPAREN          shift and go to state 67
    COMMA           shift and go to state 68


state 46

    (8) base_elements_list -> base_element .

    RPAREN          reduce using rule 8 (base_elements_list -> base_element .)
    COMMA           reduce using rule 8 (base_elements_list -> base_element .)


state 47

    (16) opt_column_list -> ID .

    RPAREN          reduce using rule 16 (opt_column_list -> ID .)
    COMMA           reduce using rule 16 (opt_column_list -> ID .)


state 48

    (14) table_statement -> INSERT INTO ID LPAREN opt_column_list . RPAREN VALUES insert_values_list
    (17) opt_column_list -> opt_column_list . COMMA ID

    RPAREN          shift and go to state 69
    COMMA           shift and go to state 70


state 49

    (15) table_statement -> INSERT INTO ID VALUES insert_values_list .
    (19) insert_values_list -> insert_values_list . COMMA LPAREN insert_value RPAREN

    SEMICOLON       reduce using rule 15 (table_statement -> INSERT INTO ID VALUES insert_values_list .)
    COMMA           shift and go to state 71


state 50

    (18) insert_values_list -> LPAREN . insert_value RPAREN
    (20) insert_value -> . base_value
    (21) insert_value -> . insert_value COMMA base_value
    (22) base_value -> . NUM
    (23) base_value -> . QUOTE ID QUOTE
    (24) base_value -> . DQUOTE ID DQUOTE
    (25) base_value -> . ID_NUM

    NUM             shift and go to state 74
    QUOTE           shift and go to state 75
    DQUOTE          shift and go to state 76
    ID_NUM          shift and go to state 77

    insert_value                   shift and go to state 72
    base_value                     shift and go to state 73

state 51
